<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MuestraDatosActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="49dp"
        android:text="@string/lblResultados"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="21dp"
        android:text="@string/lblDescuentos"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="202dp"
        android:layout_height="77dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="80dp"
                android:text="@string/lblIsss"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblISSS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1B1A1A"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAfp"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblAFP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#191818"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblRenta"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblRenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#121111"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="233dp"
        android:layout_height="36dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="115dp"
            android:text="@string/lblEmpleado"
            android:textColor="#0C0C0C"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#090909"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="291dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="33dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/lblSalario"
            android:textColor="#050505"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblSalario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0B0A0A"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="177dp"
        android:backgroundTint="#009688"
        android:onClick="finalizar"
        android:text="@string/btnFinalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="213dp"
        android:layout_height="28dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="10dp"
            android:text="@string/lblHoras"
            android:textColor="#040404"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#0C0C0C"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>